Shorten hero email form and fix some spacing

--- a/_scss/components/_btn.scss
+++ b/_scss/components/_btn.scss
@@ -5,9 +5,7 @@
     background-color: $prim-color-3;
     color: $black;
     text-decoration: none;
-    font-size: $btn-font-size;
     font-family: $body-font-family;
-    margin-bottom: 1rem;
 
     &.btn--primary {
         background-color: $prim-color-3;
