--- a/_scss/components/_hero.scss
+++ b/_scss/components/_hero.scss
@@ -29,35 +29,44 @@
     text-align: left;
   }
 
-  .hero__input {
-    padding: 16px 20px;
-    width: 75%;
-    height: 65px;
-    font-family: $body-font-family;
-    border-radius: 9px;
-    background: $white;
-    border-style: none;
-    transition: background 300ms;
-    font-size: 22px;
-  }
-
   .revuc-logo {
     max-width: 11.6vw;
     min-width: 32px;
     position: absolute;
     top: 2em;
-    left: -12em;
+    left: -10.5em;
+  }
+}
+
+.hero__email {
+  width: 77%;
+  margin: auto;
+  margin-top: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+  .hero__input {
+    flex: 1;
+    padding: 1em;
+    font-family: $body-font-family;
+    border-radius: 9px;
+    background: $white;
+    border-style: none;
+    transition: background 300ms;
   }
 
   .hero__button {
     background-color: $white;
     border-radius: 9px;
-    height: 65px;
   }
 }
 
 .hero__header-image {
   max-width: 50vw;
+  margin: auto;
+  margin-bottom: 1em;
 }
 
 .hero p {
@@ -94,15 +103,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
-      .hero__input {
-        width: 75%;
-      }
-
-      .btn {
-        margin-top: 1rem;
-        width: 50%;
-      }
+      justify-content: center;
     }
   }
 }
@@ -158,34 +159,7 @@
     }
   }
 }
-/*
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@keyframes move_cloud {
-  0% {
-    transform: translate(0px, 0px);
-  }
-  25% {
-    transform: translate(0px, -15px);
-  }
-  50% {
-    transform: translate(15px, -15px);
-  }
-  75% {
-    transform: translate(15px, 0px);
-  }
-  100% {
-    transform: translate(0px, 0px);
-  }
-}
-*/
 #particles-js {
   position: absolute;
   top: 0;
